--- a/ComputeME/Base.lproj/Main.storyboard
+++ b/ComputeME/Base.lproj/Main.storyboard
@@ -1,25 +1,79 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6162" systemVersion="14A238h" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6205" systemVersion="14A314h" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6160"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6198"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="CODE Light.otf">
+            <string>Code-Light</string>
+            <string>Code-Light</string>
+        </mutableArray>
+    </customFonts>
     <scenes>
-        <!--View Controller-->
+        <!--Start Scene View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="StartSceneViewController" customModule="ComputeME" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="RC5-73-dUg">
+                                <rect key="frame" x="175" y="45" width="250" height="250"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="v2.0.0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YhD-Bq-sY3">
+                                <rect key="frame" x="16" y="559" width="568" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="start" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nQF-5O-V6U">
+                                <rect key="frame" x="260" y="379" width="80" height="49"/>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="35"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Compute" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oeZ-75-Dau">
+                                <rect key="frame" x="175" y="301" width="168" height="70"/>
+                                <fontDescription key="fontDescription" name="Code-Light" family="Code Light" pointSize="40"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="ME" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NWw-2j-UYP">
+                                <rect key="frame" x="343" y="297" width="82" height="70"/>
+                                <fontDescription key="fontDescription" name="Code-Light" family="Code Light" pointSize="60"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.1803921568627451" green="0.64313725490196083" blue="0.45882352941176469" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="YhD-Bq-sY3" secondAttribute="centerX" id="3LP-xe-jRF"/>
+                            <constraint firstAttribute="centerX" secondItem="nQF-5O-V6U" secondAttribute="centerX" id="5VQ-Rk-Xsu"/>
+                            <constraint firstItem="oeZ-75-Dau" firstAttribute="top" secondItem="RC5-73-dUg" secondAttribute="bottom" constant="6" id="AZs-l8-FZD"/>
+                            <constraint firstItem="NWw-2j-UYP" firstAttribute="leading" secondItem="oeZ-75-Dau" secondAttribute="trailing" id="DVL-Fg-AD1"/>
+                            <constraint firstItem="RC5-73-dUg" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="25" id="HK0-DO-74e"/>
+                            <constraint firstAttribute="centerX" secondItem="RC5-73-dUg" secondAttribute="centerX" id="Nfu-9Z-rK3"/>
+                            <constraint firstItem="NWw-2j-UYP" firstAttribute="leading" secondItem="oeZ-75-Dau" secondAttribute="trailing" id="O67-ut-VG1"/>
+                            <constraint firstItem="nQF-5O-V6U" firstAttribute="top" secondItem="oeZ-75-Dau" secondAttribute="bottom" constant="8" id="UNV-pA-aln"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="YhD-Bq-sY3" secondAttribute="bottom" constant="20" id="mNy-qO-ZO5"/>
+                            <constraint firstAttribute="centerX" secondItem="oeZ-75-Dau" secondAttribute="centerX" constant="41" id="mUC-Qq-bZt"/>
+                            <constraint firstAttribute="centerX" secondItem="NWw-2j-UYP" secondAttribute="centerX" constant="-84" id="wcw-nK-moE"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="startLabel" destination="nQF-5O-V6U" id="juh-KN-iDy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="Logo" width="200" height="200"/>
+    </resources>
 </document>
